Corrected z-index for suggestions

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -157,7 +157,7 @@ body {
 }
 
 .suggestions {
-  z-index: 1;
+  z-index: 2;
   background-color: #d7d7d7;
 }
 
